# skyproHOMEWORK

./: .coverage  README.md  main.py  pyproject.toml
scr/: category.py  product.py
tests/: test_classes.py
